# simd_csv

./: Cargo.toml  README.md
benches/: csv_benchmark.rs
src/: lib.rs
