[package]
name = "simd-csv"
version = "0.1.0"
authors = ["Teddy_Wang <wangtheo662@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
csv = "1.1"

[[bench]]
name = "csv_benchmark"
harness = false
